--- a/DLUTToolBoxV3/Pages/AboutPage.xaml
+++ b/DLUTToolBoxV3/Pages/AboutPage.xaml
@@ -11,7 +11,7 @@
     xmlns:controls="using:WinUICommunity.SettingsUI.Controls"
     xmlns:labs="using:WinUICommunity.SettingsUI.SettingsControls"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="Transparent">
 
     <ScrollViewer>
 
