--- a/DLUTToolBoxV3/Pages/SystemPage.xaml
+++ b/DLUTToolBoxV3/Pages/SystemPage.xaml
@@ -9,9 +9,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    <Grid>
-
-    </Grid>
+    Background="Transparent"
+    Loaded="Page_Loaded">
 </Page>
